Fix datepicker display issues
SOme of the recent changes introduced two issues with the datepickers:

1. On large interfaces, they would expand beyond the edge of .filter-bar and
be cut off due to overflow:hidden (an attribute which is only necessary on
small screens once the filterbar is put into an offscreen drawer)

2. When used from the drawer, the second datepicker's dropdown would
expand off the edge of the screen

--- a/assets/styles/datepicker.css
+++ b/assets/styles/datepicker.css
@@ -2,6 +2,8 @@
   position: relative;
   padding: 0px 0;
   background: transparent;
+  float: left;
+  z-index: 2;
   }
 
 .elm-datepicker--input:focus {
@@ -11,8 +13,16 @@
   position: absolute;
   border: 1px solid #CCC;
   background-color: #fff;
-  z-index: 10; }
+  max-width: 400px;
+  z-index: 1;
+  top: 34px; }
 
+@media (max-width: 979px) {
+
+  .elm-datepicker--container:nth-child(2n) .elm-datepicker--picker {
+    right: -20px;
+  }
+}
 .elm-datepicker--picker-header,
 .elm-datepicker--weekdays {
   background: #FFF; }
